--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "mongodb": "^6.20.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
