--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
+    "start:local": "npm run build && node dist/server.js",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
